feat: little refactor